cmake_minimum_required(VERSION 3.5.1)

project(hbt)


# è¾“å‡ºæµ‹è¯•
message("hbt")

set(CMAKE_CXX_FLAGS "-fpermissive")


file(GLOB hbt_src "${PROJECT_SOURCE_DIR}/src/*.c"
    "${PROJECT_SOURCE_DIR}/src/help/*.c"
    "${PROJECT_SOURCE_DIR}/src/common/*.c"
    "${PROJECT_SOURCE_DIR}/src/hex/*.c"
    "${PROJECT_SOURCE_DIR}/src/hex2bin/*.c"
)


#è®¾å®šå¤´æ–‡ä»¶è·¯å¾?
include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/src" 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/help"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/common"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/hex"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/hex2bin"
)


add_executable(hbt ${hbt_src})

